--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,10 @@ services:
       - net.ipv4.ip_forward=1
     cap_add:
       - NET_ADMIN
+    depends_on:
+      wireguard-vpn-second-hop:
+        condition: service_healthy
+        restart: true
     networks:
       vpn-hop-net:
         ipv4_address: 172.22.0.10
