--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,10 @@ services:
       - net.ipv4.ip_forward=1
     cap_add:
       - NET_ADMIN
+    depends_on:
+      wireguard-vpn-second-hop:
+        condition: service_healthy
+        restart: true
     networks:
       vpn-hop-net:
         ipv4_address: 172.22.0.10
@@ -36,6 +40,12 @@ services:
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
       - net.ipv4.ip_forward=1
+    healthcheck:
+      test: ["CMD-SHELL", "ip link show wg0 >/dev/null 2>&1 || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
     networks:
       vpn-hop-net:
         ipv4_address: 172.22.0.11
