--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,7 @@ services:
       - net.ipv4.conf.all.src_valid_mark=1
       - net.ipv4.ip_forward=1
     healthcheck:
-      test: ["CMD-SHELL", "ip link show wg0 >/dev/null 2>&1 || exit 1"]
+      test: ["CMD-SHELL", "ip link show proton >/dev/null 2>&1 || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 3
