--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 services:
 
-  wgdashboard:
-    container_name: wgdashboard
+  wireguard-vpn-server:
+    container_name: wireguard-vpn-server
     image: ghcr.io/wgdashboard/wgdashboard:latest
     restart: always
     ports:
       - 51820:51820/udp
     volumes:
-      - /srv/docker_data/wgdashboard/aconf:/etc/amnezia/amneziawg
-      - /srv/docker_data/wgdashboard/conf:/etc/wireguard
-      - /srv/docker_data/wgdashboard/data:/data
+      - /srv/docker_data/wireguard_vpn_server/aconf:/etc/amnezia/amneziawg
+      - /srv/docker_data/wireguard_vpn_server/conf:/etc/wireguard
+      - /srv/docker_data/wireguard_vpn_server/data:/data
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
       - net.ipv4.ip_forward=1
@@ -19,6 +19,7 @@ services:
       vpn-hop-net:
         ipv4_address: 172.22.0.10
       vpn-net:
+      admin-tools-net:
 
   wireguard-vpn-second-hop:
     image: lscr.io/linuxserver/wireguard:latest
