--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - net.ipv4.ip_forward=1
     cap_add:
       - NET_ADMIN
-    evnironment:
+    environment:
       - username=admin
       - password=${WIREGUARD_PORTAL_ADMIN_PASSWORD}
     networks:
